--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script defer src="script.js"></script>
 
-    <title>Snake AI</title>
+    <title>Liran Bar Mitzva</title>
 </head>
 <body class="unselectable">
     <div id="main_container">
